<resources>
    <string name="app_name">MyChat</string>
    <string name="password_hint">Password</string>
    <string name="e_mail_hint">E-mail</string>
    <string name="login_text">LOGIN</string>
    <string name="register_here">Register Here</string>
    <string name="don_t_have_account">Don\'t Have Account ?</string>
    <string name="login">Login</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="register">Register</string>
    <string name="do_you_have_account">Do You Have Account ?</string>
    <string name="full_name">Full Name</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_room">Add Room</string>
    <string name="enter_message">Enter Message ..</string>
    <string name="channel_name">messages_channel</string>
    <string name="channel_description">messages_description</string>
</resources>