<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="vm"
            type="com.example.mychat.ui.register.RegisterViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".ui.register.RegisterActivity">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="126dp"
                    android:layout_height="132dp"
                    android:src="@drawable/signup_top"
                    android:paddingBottom="10dp"
                    android:scaleType="centerCrop" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="REGISTER"
                    android:textSize="20sp"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="50dp"
                    android:textColor="@color/main_color"
                    android:textStyle="bold"
                    android:letterSpacing=".05" />


            </LinearLayout>

            <ImageView
                android:layout_width="280dp"
                android:layout_height="230dp"
                android:layout_gravity="center"
                android:background="@drawable/signup" />

            <EditText
                android:id="@+id/registerEditTextFullName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/sign"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:hint="@string/full_name"
                android:text="@={vm.fullName}"
                android:gravity="center"
                android:textColorHint="@color/black"
                />
            <TextView
                android:id="@+id/registerFullNameError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Please Enter Full Name !"
                android:textColor="@android:color/holo_red_light"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:visibility="@{vm.fullNameError?View.VISIBLE:View.GONE}"
                />
            <EditText
                android:id="@+id/registerEditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/sign"
                android:text="@={vm.email}"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="12dp"
                android:hint="@string/e_mail_hint"
                android:gravity="center"
                android:textColorHint="@color/black"
                />
            <TextView
                android:id="@+id/registerEmailError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Please Enter Correct Email !"
                android:textColor="@android:color/holo_red_light"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:visibility="@{vm.emailError?View.VISIBLE:View.GONE}"
                />

            <EditText
                android:id="@+id/registerEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/sign"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="12dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:gravity="center"
                android:text="@={vm.password}"
                android:textColorHint="@color/black"
                />
            <TextView
                android:id="@+id/registerPasswordError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Password Should be 6 Char At least !"
                android:textColor="@android:color/holo_red_light"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:visibility="@{vm.passwordError?View.VISIBLE:View.GONE}"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:padding="6dp"
                    android:textColor="@color/black"
                    android:text="@string/do_you_have_account"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"
                    android:padding="6dp"
                    android:text="@string/login"
                    android:textStyle="bold"
                    android:onClick="@{()->vm.goToLogin()}"
                    android:textColor="@color/main_color"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/loginButtonLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="40dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:onClick="@{()->vm.register()}"
                android:background="@drawable/button_shape" />

        </LinearLayout>
    </ScrollView>
</layout>